# rust-vulcan

./: .gitignore  Cargo.toml
forge_core/: Cargo.toml
forge_core/src/: ast.rs  compiler.rs  forge.pest  forge_parser.rs  lib.rs  new.pest  parse_test.txt
forge_core/src/compiler/: compilable.rs  compile_error.rs  compiled_fn.rs  mod.rs  state.rs  test_utils.rs  text.rs  utils.rs
novaforth/: Cargo.toml  build.rs
novaforth/src/: lib.rs  prelude.f
src/: bus.rs  cpu.rs  display.rs  main.rs  memory.rs  opcodes.rs  word.rs
vasm/: Cargo.toml
vasm/src/: ast.rs  lib.rs  main.rs  parse_error.rs  vasm.pest  vasm_assembler.rs  vasm_evaluator.rs  vasm_line.rs  vasm_parser.rs  vasm_preprocessor.rs
vasm_core/: Cargo.toml
vasm_core/src/: ast.rs  lib.rs  parse_error.rs  vasm.pest  vasm_assembler.rs  vasm_evaluator.rs  vasm_parser.rs  vasm_preprocessor.rs
vcore/: Cargo.toml
vcore/src/: cpu.rs  lib.rs  memory.rs  opcodes.rs  word.rs
vemu/: Cargo.toml
vemu/src/: display.rs  gfx_test.rom  keyboard.rs  main.rs  typewriter.asm
vgfx/: Cargo.toml
vgfx/src/: display.rs
vlua/: Cargo.toml
vlua/src/: lib.rs
vtest/: Cargo.toml
vtest/src/: forge_tests.rs  integration_tests.rs  lib.rs
vweb/: Cargo.toml  build.sh  esbuild.js  package-lock.json  package.json
vweb/4th/: 4th.rom  4th.rom.sym  prelude.f
vweb/src/: app.css  app.js  basics.html  display.rs  emulator_display.jsx  error.rs  forge_editor.jsx  forge_editor_demo.html  forge_editor_demo.jsx  forge_highlighter.js  forge_simulator.jsx  highlighted_line.jsx  index.html  lib.rs  nova_forth.rs  simulator.css  snippet_emulator.css  snippet_emulator.jsx  snippet_emulator_demo.html  snippet_emulator_demo.js  snippet_emulator_demo.jsx  undent.jsx  wasm_cpu.rs
(+42 files in other folders)
