[package]
name = "vlua"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
vcore = { path = "../vcore" }
mlua = { version = "0.8.0-beta.4", features = ["lua54", "vendored", "module"] }
